--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body><div class="container">
   <div class="main">
-<h1>Ollie Bike Sharing</h1>
+<h1>Ollie car Sharing</h1>
 <h3>  shear your pedals with the worlds.</h3>
   
   <p>Need a set of wheels while you're in town? Use Ollie to pair your perfect vacation with a stylish, affordable bike rental.</p>
