--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ $(document).ready(function()  {
 </head>
 <body>
     
-  <center> <h1>   song </h1> <center>
+  <center> <h1>   song </h1> </center>
    
     <button id="start"> start</button>
     <br><br>
