--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ $('#stop2').click(function(e) {
 </head>
 <body>
     
-  <center> <h1>   song </h1> </center>
+  <center> <h1>   songs </h1> </center>
    
     <button id="start"> start</button>
     <br><br>
